[website] Add features section

--- a/website/index.html
+++ b/website/index.html
@@ -107,28 +107,52 @@
                                 </span>
                             </div>
                             <h5>Hover, Focus, Capture</h5>
-                            <p class="mb-4">Integrated as Chrome extension, you can instantly clip beautiful components you found on the web.</p>
+                            <p class="mb-4">
+                                Integrated as Chrome extension, you can instantly clip beautiful components you found on the web. 
+                            </p>
+                            <p>
+                                Simple steps to clip:
+                            </p>
+                            <ol>
+                                <li>Hit Command+Shift+S to activate extension</li>
+                                <li>Hover mouse cursor on desired component</li>
+                                <li>Hit S to preview and save it!</li>
+                            </ol>
 
                             <div class="row">
                                 <div class="col-sm-6">
-                                    <p><i data-feather="check" class="icon-dual-success mr-2"></i> Donec quam felis</p>
+                                    <p><i data-feather="check" class="icon-dual-success mr-2"></i> Chrome extension</p>
                                 </div>
                                 <div class="col-sm-6">
-                                    <p><i data-feather="check" class="icon-dual-success mr-2"></i> Ultricies nec</p>
+                                    <p>
+                                        <i data-feather="check" class="icon-dual-success mr-2"></i> 
+                                        Intuitive
+                                    </p>
                                 </div>
                             </div>
 
                             <div class="mt-4">
-                                <a href="#" class="btn btn-primary">Learn more <i data-feather="arrow-right" class="icons-sm ml-1"></i></a>
+                                <a href="#" class="btn btn-primary">Get Chrome Extension<i data-feather="arrow-right" class="icons-sm ml-1"></i></a>
                             </div>
                         </div>
                     </div>
 
                     <div class="col-lg-5 ml-lg-auto col-sm-8 outline">
-                        <div class="card shadow-none mt-5 mt-lg-0">
+                        <div class="card border border-light shadow-none">
+                            <div class="card-header border-0 bg-transparent">
+                                <div>
+                                    <i class="mdi mdi-circle text-danger mr-1"></i>
+                                    <i class="mdi mdi-circle text-warning mr-1"></i>
+                                    <i class="mdi mdi-circle text-success mr-1"></i>
+                                </div>
+                            </div>
+                            <div class="card-body bg-light">
+                                <div class="box-shadow">
                                 <img src="images/component.svg" alt="" class="img-fluid mx-auto d-block component">
                                 <img src="images/cursor.png" alt="mouse cursor" class="mouse-cursor" />
                                 <img src="images/camera.png" alt="camera" class="camera" />
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -146,7 +170,7 @@
                             </div>
                             <div class="card-body bg-light">
                                 <div class="box-shadow">
-                                    <img src="images/features/img-2.png" alt="" class="img-fluid mx-auto d-block">
+                                    <img src="images/dashboard.png" alt="" class="img-fluid mx-auto d-block">
                                 </div>
                             </div>
                         </div>
@@ -158,20 +182,26 @@
                                     <i data-feather="pie-chart" class="icon-dual-primary"></i>
                                 </span>
                             </div>
-                            <h5>Increase your Marketing Performance</h5>
-                            <p class="mb-4">If several languages coalesce, the grammar of the resulting language is more simple and regular.</p>
+                            <h5>Keep Them Organized, Beautifully</h5>
+                            <p class="mb-4">
+                                Once you clip components, they are stored in cloud storage and displayed in your showcase web app.
+                            </p>
+                            <p class="mb-4">
+                                Every components can be tagged. You are free to create any tag, too. 
+                                If you are too lazy to tag, we automatically organize them according to websites' domain.
+                            </p>
 
                             <div class="row">
                                 <div class="col-sm-6">
-                                    <p><i data-feather="check" class="icon-dual-success mr-2"></i> Donec quam felis</p>
+                                    <p><i data-feather="check" class="icon-dual-success mr-2"></i> Organized by tag</p>
                                 </div>
                                 <div class="col-sm-6">
-                                    <p><i data-feather="check" class="icon-dual-success mr-2"></i> Ultricies nec</p>
+                                    <p><i data-feather="check" class="icon-dual-success mr-2"></i> Showcase web app</p>
                                 </div>
                             </div>
 
                             <div class="mt-4">
-                                <a href="#" class="btn btn-primary">Learn more <i data-feather="arrow-right" class="icons-sm ml-1"></i></a>
+                                <a href="#" class="btn btn-primary">Sign up<i data-feather="arrow-right" class="icons-sm ml-1"></i></a>
                             </div>
                         </div>
                     </div>
