--- a/website/index.html
+++ b/website/index.html
@@ -201,7 +201,7 @@
                             </div>
 
                             <div class="mt-4">
-                                <a href="#" class="btn btn-primary">Sign up<i data-feather="arrow-right" class="icons-sm ml-1"></i></a>
+                                <a href="#" class="btn btn-primary">Launch app<i data-feather="arrow-right" class="icons-sm ml-1"></i></a>
                             </div>
                         </div>
                     </div>
@@ -213,84 +213,29 @@
         </section>
         <!-- Features end -->
 
-
-        <!-- Services start -->
-        <section class="section" id="services">
+        <!-- Cta start -->
+        <section id="subscribe" class="section bg-light">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
-                        <div class="text-center mb-1">
-                            <h2 class="text-primary text-uppercase small-title">Features</h2>
+                        <div class="text-center mb-5">
+                            <p class="text-primary text-uppercase small-title">get started</p>
+                            <h2 class="mb-3">Start collection for free</h2>
+                            <p>It will take less than a minute!</p>
                         </div>
                     </div>
-                </div>
-                <!-- end row -->
-                <div class="row">
-                    <div class="col-xl-4 col-sm-6">
-                        <div class="text-center p-4 mt-3">
-                            <div class="avatar-md mx-auto mb-4">
-                                <span class="avatar-title rounded-circle bg-soft-primary">
-                                    <i data-feather="message-square" class="icon-dual-primary"></i>
-                                </span>
+
+                    <div class="col-xl-8 col-lg-10">
+                        <div class="text-center">
+                            <div class="subscribe">
+                                <div class="row justify-content-center">
+                                    <div class="col-md-6">
+                                        <div class="mt-1">
+                                            <a href="#" class="btn btn-primary mr-2"> Get Chrome extension<i data-feather="arrow-right" class="icons-sm ml-1"></i></a>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                            <h3 class="font-18">Communication</h3>
-                            <p class="mb-0">BandEngine is just like Slack but is integrated with other functionality, tailored specifically to the needs of modern-day bands.</p>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-sm-6">
-                        <div class="text-center p-4 mt-3">
-                            <div class="avatar-md mx-auto mb-4">
-                                <span class="avatar-title rounded-circle bg-soft-primary">
-                                    <i data-feather="calendar" class="icon-dual-primary"></i>
-                                </span>
-                            </div>
-                            <h3 class="font-18">Scheduling</h3>
-                            <p class="mb-0">BandEngine allows your group members to vote on scheduling, such as when the next rehearsal, meeting, or band hangout will be.</p>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-sm-6">
-                        <div class="text-center p-4 mt-3">
-                            <div class="avatar-md mx-auto mb-4">
-                                <span class="avatar-title rounded-circle bg-soft-primary">
-                                    <i data-feather="dollar-sign" class="icon-dual-primary"></i>
-                                </span>
-                            </div>
-                            <h3 class="font-18">Finance</h3>
-                            <p class="mb-0">Keep track of your band's income and spending.</p>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-sm-6">
-                        <div class="text-center p-4 mt-3">
-                            <div class="avatar-md mx-auto mb-4">
-                                <span class="avatar-title rounded-circle bg-soft-primary">
-                                    <i data-feather="mic" class="icon-dual-primary"></i>
-                                </span>
-                            </div>
-                            <h3 class="font-18">Recorder</h3>
-                            <p class="mb-0">Record and share your ideas for the next song directly through BandEngine.</p>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-sm-6">
-                        <div class="text-center p-4 mt-3">
-                            <div class="avatar-md mx-auto mb-4">
-                                <span class="avatar-title rounded-circle bg-soft-primary">
-                                    <i data-feather="file" class="icon-dual-primary"></i>
-                                </span>
-                            </div>
-                            <h3 class="font-18">Song-based File Storage</h3>
-                            <p class="mb-0">You'll find any file immediately. 
-                                Recordings, chords, and lyrics are grouped into song folders, keeping everything organized.</p>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-sm-6">
-                        <div class="text-center p-4 mt-3">
-                            <div class="avatar-md mx-auto mb-4">
-                                <span class="avatar-title rounded-circle bg-soft-primary">
-                                    <i data-feather="edit" class="icon-dual-primary"></i>
-                                </span>
-                            </div>
-                            <h3 class="font-18">Chords Editor</h3>
-                            <p class="mb-0">Be more productive with BandEngine’s built-in editor, dedicated specifically for chord progression.</p>
                         </div>
                     </div>
                 </div>
@@ -298,7 +243,7 @@
             </div>
             <!-- end container -->
         </section>
-        <!-- Services end -->
+        <!-- Cta end -->
 
         <!-- Footer alt start -->
         <footer class="footer">
@@ -311,7 +256,7 @@
                             </ul>
                         </div>
                         <div class="float-sm-right mt-4 mt-sm-0">
-                            <p class="copyright-desc mb-0">2020 © BandEngine</p>
+                            <p class="copyright-desc mb-0">2020 © Studio Rubik</p>
                         </div>
                     </div>
                 </div>
