--- a/website/index.html
+++ b/website/index.html
@@ -65,7 +65,7 @@
                         <div class="hero-wrapper mb-4">
                             <h1 class="hero-title mb-4">Clip Your Favorite Web Components</h1>
                             <p class="hero-subtitle">
-                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus eum commodi nemo suscipit tempora ve.
+                                Collect beautiful things from the web, to enhance your sense of web design.
                             </p>
 
                             <div class="mt-4">
