--- a/website/index.html
+++ b/website/index.html
@@ -158,8 +158,8 @@
                 </div>
                 <!-- end row -->
 
-                <div class="row mt-5 pt-5">
-                    <div class="col-lg-5 col-sm-8">
+                <div class="row mt-5 pt-5 justify-content-center">
+                    <div class="col-lg-7 col-sm-8">
                         <div class="card border border-light shadow-none">
                             <div class="card-header border-0 bg-transparent">
                                 <div>
@@ -170,12 +170,12 @@
                             </div>
                             <div class="card-body bg-light">
                                 <div class="box-shadow">
-                                    <img src="images/dashboard.png" alt="" class="img-fluid mx-auto d-block">
+                                    <img src="images/showcase.png" alt="showcase" class="img-fluid mx-auto d-block showcase">
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-5 ml-lg-auto">
+                    <div class="col-lg-5 ml-lg-auto pl-lg-4" >
                         <div class="mt-4 mt-lg-0">
                             <div class="avatar-md mb-4">
                                 <span class="avatar-title rounded-circle bg-soft-primary">
