[website] Edit copies

--- a/website/index.html
+++ b/website/index.html
@@ -65,7 +65,7 @@
                         <div class="hero-wrapper mb-4">
                             <h1 class="hero-title mb-4">Clip Your Favorite Web Components</h1>
                             <p class="hero-subtitle">
-                                Collect beautiful things from the web, to enhance your sense of web design.
+                                Collect inspiration from the web, to enhance your sense of design.
                             </p>
 
                             <div class="mt-4">
@@ -90,15 +90,15 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
                         <div class="text-center mb-5">
-                            <h5 class="text-primary text-uppercase small-title">Features</h5>
-                            <h4 class="mb-3">Key features of the product</h4>
-                            <p>It will be as simple as occidental in fact, it will be Occidental.</p>
+                            <p class="text-primary text-uppercase small-title">Features</p>
+                            <h2 class="mb-3">Clip, Display - That's All</h2>
+                            <p>You'll never get lost.</p>
                         </div>
                     </div>
                 </div>
                 <!-- end row -->
 
-                <div class="row">
+                <div class="row justify-content-center">
                     <div class="col-lg-5">
                         <div>
                             <div class="avatar-md mb-4">
@@ -106,12 +106,12 @@
                                     <i data-feather="bar-chart-2" class="icon-dual-primary"></i>
                                 </span>
                             </div>
-                            <h5>Hover, Focus, Capture</h5>
+                            <h3>Inspired? Clip It.</h3>
                             <p class="mb-4">
                                 Integrated as Chrome extension, you can instantly clip beautiful components you found on the web. 
                             </p>
                             <p>
-                                Simple steps to clip:
+                                To clip:
                             </p>
                             <ol>
                                 <li>Hit Command+Shift+S to activate extension</li>
@@ -182,9 +182,9 @@
                                     <i data-feather="pie-chart" class="icon-dual-primary"></i>
                                 </span>
                             </div>
-                            <h5>Keep Them Organized, Beautifully</h5>
+                            <h3>Keep Them Organized, Beautifully</h3>
                             <p class="mb-4">
-                                Once you clip components, they are stored in cloud storage and displayed in your showcase web app.
+                                Once you clip components, they are stored in your showcase that's accessible from any browser.
                             </p>
                             <p class="mb-4">
                                 Every components can be tagged. You are free to create any tag, too. 
