Change html title

--- a/website/index.html
+++ b/website/index.html
@@ -4,11 +4,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>BandEngine</title>
+        <title>Qlip - Clip inspiration on the Web</title>
         <meta name="description" content="Make Your Band More Productive Than Ever. 
         Focus on creating music, not chores. Scheduling and communication will never bother your creative process." />
         <meta name="keywords" content="" />
-        <meta name="author" content="BandEngine" />
+        <meta name="author" content="Clip" />
 
         <!-- App favicon -->
         <link rel="shortcut icon" href="images/favicon.ico">
