--- a/website/privacy.html
+++ b/website/privacy.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>BandEngine</title>
+        <title>Privacy Policy - Qlip</title>
         <meta name="description" content="" />
         <meta name="keywords" content="" />
         <meta name="author" content="Themesdesign" />
