--- a/website/thankyou.html
+++ b/website/thankyou.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>BandEngine</title>
+        <title>Thank You! - Qlip</title>
         <meta name="description" content="Make Your Band More Productive Than Ever. 
         Focus on creating music, not chores. Scheduling and communication will never bother your creative process." />
         <meta name="keywords" content="" />
