[website] Fix head contents

--- a/website/index.html
+++ b/website/index.html
@@ -8,7 +8,7 @@
         <meta name="description" content="Make Your Band More Productive Than Ever. 
         Focus on creating music, not chores. Scheduling and communication will never bother your creative process." />
         <meta name="keywords" content="" />
-        <meta name="author" content="Clip" />
+        <meta name="author" content="Studio Rubik" />
 
         <!-- App favicon -->
         <link rel="shortcut icon" href="images/favicon.ico">
