--- a/website/privacy.html
+++ b/website/privacy.html
@@ -7,7 +7,7 @@
         <title>Privacy Policy - Qlip</title>
         <meta name="description" content="" />
         <meta name="keywords" content="" />
-        <meta name="author" content="Themesdesign" />
+        <meta name="author" content="Studio Rubik" />
 
         <!-- App favicon -->
         <link rel="shortcut icon" href="images/favicon.ico">
@@ -100,7 +100,7 @@
                             </ul>
                         </div>
                         <div class="float-sm-right mt-4 mt-sm-0">
-                            <p class="copyright-desc mb-0">2020 © BandEngine</p>
+                            <p class="copyright-desc mb-0">2020 © Studio Rubik</p>
                         </div>
                     </div>
                 </div>
