[website] Fix meta tag

--- a/website/index.html
+++ b/website/index.html
@@ -5,8 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Qlip - Clip inspiration on the Web</title>
-        <meta name="description" content="Make Your Band More Productive Than Ever. 
-        Focus on creating music, not chores. Scheduling and communication will never bother your creative process." />
+        <meta name="description" content="" />
         <meta name="keywords" content="" />
         <meta name="author" content="Studio Rubik" />
 
