[website] Update contents

--- a/website/index.html
+++ b/website/index.html
@@ -58,8 +58,8 @@
                             </p>
 
                             <div class="mt-4">
-                                <a href="#" class="btn btn-primary mt-2 mr-2">Get Started</a>
-                                <a href="#" class="btn btn-success mt-2 mr-2">Learn more</a>
+                                <a href="#" class="btn btn-primary mt-2 mr-2">Get Chrome Extension</a>
+                                <a href="#features" class="btn btn-success mt-2 mr-2">Learn More</a>
                             </div>
                         </div>
                     </div>
@@ -92,7 +92,7 @@
                         <div>
                             <div class="avatar-md mb-4">
                                 <span class="avatar-title rounded-circle bg-soft-primary">
-                                    <i data-feather="bar-chart-2" class="icon-dual-primary"></i>
+                                    <i data-feather="paperclip" class="icon-dual-primary"></i>
                                 </span>
                             </div>
                             <h3>Inspired? Clip It.</h3>
@@ -110,13 +110,10 @@
 
                             <div class="row">
                                 <div class="col-sm-6">
-                                    <p><i data-feather="check" class="icon-dual-success mr-2"></i> Chrome extension</p>
+                                    <p>🔌 Chrome extension</p>
                                 </div>
                                 <div class="col-sm-6">
-                                    <p>
-                                        <i data-feather="check" class="icon-dual-success mr-2"></i> 
-                                        Intuitive
-                                    </p>
+                                    <p>💡 Intuitive design</p>
                                 </div>
                             </div>
 
@@ -168,10 +165,10 @@
                         <div class="mt-4 mt-lg-0">
                             <div class="avatar-md mb-4">
                                 <span class="avatar-title rounded-circle bg-soft-primary">
-                                    <i data-feather="pie-chart" class="icon-dual-primary"></i>
+                                    <i data-feather="tag" class="icon-dual-primary"></i>
                                 </span>
                             </div>
-                            <h3>Keep Them Organized, Beautifully</h3>
+                            <h3>Your Design Showcase</h3>
                             <p class="mb-4">
                                 Once you clip components, they are stored in your showcase that's accessible from any browser.
                             </p>
@@ -181,16 +178,14 @@
                             </p>
 
                             <div class="row">
-                                <div class="col-sm-6">
-                                    <p><i data-feather="check" class="icon-dual-success mr-2"></i> Organized by tag</p>
-                                </div>
-                                <div class="col-sm-6">
-                                    <p><i data-feather="check" class="icon-dual-success mr-2"></i> Showcase web app</p>
+                                <div class="col-sm-12">
+                                    <p>🖼 Browse them at <a href="https://app.qlip.page" >Your Showcase</a></p>
+                                    <p>🏷 🌐 Organize them by tag and domain</p>
                                 </div>
                             </div>
 
                             <div class="mt-4">
-                                <a href="#" class="btn btn-primary">Launch app<i data-feather="arrow-right" class="icons-sm ml-1"></i></a>
+                                <a href="https://app.qlip.page" class="btn btn-primary">See Your Showcase<i data-feather="arrow-right" class="icons-sm ml-1"></i></a>
                             </div>
                         </div>
                     </div>
@@ -220,7 +215,7 @@
                                 <div class="row justify-content-center">
                                     <div class="col-md-6">
                                         <div class="mt-1">
-                                            <a href="#" class="btn btn-primary mr-2"> Get Chrome extension<i data-feather="arrow-right" class="icons-sm ml-1"></i></a>
+                                            <a href="#" class="btn btn-primary mr-2"> Get Chrome Extension<i data-feather="arrow-right" class="icons-sm ml-1"></i></a>
                                         </div>
                                     </div>
                                 </div>
