[website] Improve design and copy

--- a/website/index.html
+++ b/website/index.html
@@ -47,14 +47,14 @@
         <!-- Navbar End -->
         
         <!-- Hero section Start -->
-        <section class="hero-section-2" id="home" style="background: url(images/bg-1.webp) center center;">
+        <section class="hero-section-2" id="home" style="background: url(images/bg-1.webp) center center; background-repeat: no-repeat;">
             <div class="container">
                 <div class="row vertical-content justify-content-center">
-                    <div class="col-lg-6">
+                    <div class="col-lg-4">
                         <div class="hero-wrapper mb-4">
-                            <h1 class="hero-title mb-4">Clip Your Favorite Web Components</h1>
+                            <h1 class="hero-title mb-4">Clip Inspiration on the Web, Quickly</h1>
                             <p class="hero-subtitle">
-                                Collect inspiration from the web, to enhance your sense of design.
+                                Your own showcase of web design
                             </p>
 
                             <div class="mt-4">
@@ -64,8 +64,11 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-4 offset-lg-2">
-                        <img src="images/hero.svg" alt="website" class="img-fluid mx-auto d-block hero-img">
+                    <div class="col-lg-4 col-sm-12 showcase">
+                        <img src="images/showcase1.png" alt="website" class="img-fluid mx-auto d-block hero-img">
+                    </div>
+                    <div class="col-lg-4 col-sm-12 showcase">
+                        <img src="images/showcase2.png" alt="website" class="img-fluid mx-auto d-block hero-img">
                     </div>
                 </div>
             </div>
@@ -88,12 +91,14 @@
                 <!-- end row -->
 
                 <div class="row justify-content-center">
-                    <div class="col-lg-5">
+                    <div class="col-lg-5 mb-4">
                         <div>
-                            <div class="avatar-md mb-4">
-                                <span class="avatar-title rounded-circle bg-soft-primary">
-                                    <i data-feather="paperclip" class="icon-dual-primary"></i>
-                                </span>
+                            <div class="header-icon">
+                                <div class="avatar-md mb-4 header-icon">
+                                    <span class="avatar-title rounded-circle bg-soft-primary">
+                                        <i data-feather="paperclip" class="icon-dual-primary"></i>
+                                    </span>
+                                </div>
                             </div>
                             <h3>Inspired? Clip It.</h3>
                             <p class="mb-4">
@@ -103,16 +108,14 @@
                                 To clip:
                             </p>
                             <ol>
-                                <li>Hit Command+Shift+S to activate extension</li>
+                                <li>Hit Command+Shift+S</li>
                                 <li>Hover mouse cursor on desired component</li>
                                 <li>Hit S to preview and save it!</li>
                             </ol>
 
                             <div class="row">
-                                <div class="col-sm-6">
-                                    <p>🔌 Chrome extension</p>
-                                </div>
-                                <div class="col-sm-6">
+                                <div class="col-12">
+                                    <p>🔌 Chrome integration</p>
                                     <p>💡 Intuitive design</p>
                                 </div>
                             </div>
@@ -144,7 +147,7 @@
                 </div>
                 <!-- end row -->
 
-                <div class="row mt-5 pt-5 justify-content-center">
+                <div class="row mt-5 mt-sm-0 pt-5 justify-content-center">
                     <div class="col-lg-7 col-sm-8">
                         <div class="card border border-light shadow-none">
                             <div class="card-header border-0 bg-transparent">
@@ -234,13 +237,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        <div class="float-sm-left">
+                        <div class="float-sm-left text-center">
                             <ul class="list-unstyled footer-list-menu">
                                 <li><a href="/privacy">Privacy Policy</a></li>
                             </ul>
                         </div>
-                        <div class="float-sm-right mt-4 mt-sm-0">
-                            <p class="copyright-desc mb-0">2020 © Studio Rubik</p>
+                        <div class="float-sm-right mt-4 mt-sm-0 text-center">
+                            <p class="copyright-desc mb-0"><small>2020 © Studio Rubik</small></p>
                         </div>
                     </div>
                 </div>
