--- a/website/index.html
+++ b/website/index.html
@@ -57,7 +57,7 @@
                                 Your own showcase of web design
                             </p>
 
-                            <div class="mt-4">
+                            <div class="mt-4 mb-5">
                                 <a href="#" class="btn btn-primary mt-2 mr-2">Get Chrome Extension</a>
                                 <a href="#features" class="btn btn-success mt-2 mr-2">Learn More</a>
                             </div>
@@ -107,7 +107,7 @@
                             <p>
                                 To clip:
                             </p>
-                            <ol>
+                            <ol class="mb-5">
                                 <li>Hit Command+Shift+S</li>
                                 <li>Hover mouse cursor on desired component</li>
                                 <li>Hit S to preview and save it!</li>
@@ -175,15 +175,11 @@
                             <p class="mb-4">
                                 Once you clip components, they are stored in your showcase that's accessible from any browser.
                             </p>
-                            <p class="mb-4">
-                                Every components can be tagged. You are free to create any tag, too. 
-                                If you are too lazy to tag, we automatically organize them according to websites' domain.
-                            </p>
 
                             <div class="row">
                                 <div class="col-sm-12">
-                                    <p>🖼 Browse them at <a href="https://app.qlip.page" >Your Showcase</a></p>
                                     <p>🏷 🌐 Organize them by tag and domain</p>
+                                    <p>🖼 Browse them at <a href="https://app.qlip.page" >Your Showcase</a></p>
                                 </div>
                             </div>
 
