[website] Improve copy

--- a/website/index.html
+++ b/website/index.html
@@ -84,7 +84,7 @@
                         <div class="text-center mb-5">
                             <p class="text-primary text-uppercase small-title">Features</p>
                             <h2 class="mb-3">Clip, Display - That's All</h2>
-                            <p>You'll never get lost.</p>
+                            <p>You'll never get lost</p>
                         </div>
                     </div>
                 </div>
@@ -102,7 +102,7 @@
                             </div>
                             <h3>Inspired? Clip It.</h3>
                             <p class="mb-4">
-                                Integrated as Chrome extension, you can instantly clip beautiful components you found on the web. 
+                                Integrated as Chrome extension, Qlip enables you to instantly clip beautiful components on the web. 
                             </p>
                             <p>
                                 To clip:
@@ -178,8 +178,8 @@
 
                             <div class="row">
                                 <div class="col-sm-12">
-                                    <p>🏷 🌐 Organize them by tag and domain</p>
-                                    <p>🖼 Browse them at <a href="https://app.qlip.page" >Your Showcase</a></p>
+                                    <p>🏷 🌐 Organized with tag and domain</p>
+                                    <p>🖼 Displayed in <a href="https://app.qlip.page" >Your Showcase</a></p>
                                 </div>
                             </div>
 
