--- a/website/index.html
+++ b/website/index.html
@@ -65,10 +65,10 @@
                     </div>
 
                     <div class="col-lg-4 col-sm-12 showcase">
-                        <img src="images/showcase1.png" alt="website" class="img-fluid mx-auto d-block hero-img">
+                        <img src="images/showcase1.webp" alt="clipped design" class="img-fluid mx-auto d-block hero-img">
                     </div>
                     <div class="col-lg-4 col-sm-12 showcase">
-                        <img src="images/showcase2.png" alt="website" class="img-fluid mx-auto d-block hero-img">
+                        <img src="images/showcase2.webp" alt="clipped design" class="img-fluid mx-auto d-block hero-img">
                     </div>
                 </div>
             </div>
@@ -159,7 +159,7 @@
                             </div>
                             <div class="card-body bg-light">
                                 <div class="box-shadow">
-                                    <img src="images/showcase.png" alt="showcase" class="img-fluid mx-auto d-block showcase">
+                                    <img src="images/showcase.webp" alt="showcase" class="img-fluid mx-auto d-block showcase">
                                 </div>
                             </div>
                         </div>
@@ -179,7 +179,7 @@
                             <div class="row">
                                 <div class="col-sm-12">
                                     <p>🏷 🌐 Organized with tag and domain</p>
-                                    <p>🖼 Displayed in <a href="https://app.qlip.page" >Your Showcase</a></p>
+                                    <p>🖼 Displayed in <a href="https://app.qlip.page" >your showcase</a></p>
                                 </div>
                             </div>
 
