--- a/website/privacy.html
+++ b/website/privacy.html
@@ -17,6 +17,16 @@
 
         <!-- Custom  sCss -->
         <link rel="stylesheet" type="text/css" href="css/style.css" />
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-128111595-8"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-128111595-8');
+        </script>
     </head>
 
     <body>
