[website] Update privacy

--- a/website/privacy.html
+++ b/website/privacy.html
@@ -65,16 +65,16 @@
                 policy.
               </p>
               <h2>What personal data we collect</h2>
-              <h3>1. Forms</h3>
+              <h3>1. Email</h3>
               <p>
-                We collect your email address from subscription form.
+                We get your email address when you sign up.
               </p>
               <h3>2. Google Analytics</h3>
               <p>
                 We use Google Analytics to track visitors on this site.<br />
                 Google Analytics uses cookies to collect this data.<br />
                 In order to be compliant with the new regulation Google included a data processing amendment.<br />
-                The data we collect will be processed anonymously and “Data sharing” is disabled.<br />
+                The data we collect will be processed anonymously and "Data sharing" is disabled.<br />
               </p>
               <h2>Cookie Policy</h2>
               <p>
