--- a/website/index.html
+++ b/website/index.html
@@ -18,6 +18,9 @@
         <!-- Material Icon -->
         <link rel="stylesheet" type="text/css" href="css/materialdesignicons.min.css" />
 
+        <!-- Place your kit's code here -->
+        <script src="https://kit.fontawesome.com/44dd5dc4ef.js" crossorigin="anonymous"></script>
+
         <!-- Custom  sCss -->
         <link rel="stylesheet" type="text/css" href="css/style.css" />
 
@@ -68,7 +71,7 @@
                             </p>
 
                             <div class="mt-4 mb-5">
-                                <a href="#" class="btn btn-primary mt-2 mr-2">Get Chrome Extension</a>
+                                <a href="https://app.qlip.page" class="btn btn-primary mt-2 mr-2">Open Your Showcase</a>
                                 <a href="#features" class="btn btn-success mt-2 mr-2">Learn More</a>
                             </div>
                         </div>
@@ -106,7 +109,7 @@
                             <div class="header-icon">
                                 <div class="avatar-md mb-4 header-icon">
                                     <span class="avatar-title rounded-circle bg-soft-primary">
-                                        <i data-feather="paperclip" class="icon-dual-primary"></i>
+                                        <i class="fas fa-camera icon-dual-primary" style="font-size: 24px;"></i>
                                     </span>
                                 </div>
                             </div>
@@ -125,13 +128,19 @@
 
                             <div class="row">
                                 <div class="col-12">
-                                    <p>🔌 Chrome integration</p>
-                                    <p>💡 Intuitive design</p>
+                                    <p>
+                                        <i class="fas fa-plug"></i>
+                                        <span>Chrome integration</span>
+                                    </p>
+                                    <p>
+                                        <i class="fas fa-lightbulb"></i>
+                                        <span> Intuitive design</span>
+                                    </p>
                                 </div>
                             </div>
 
                             <div class="mt-4">
-                                <a href="#" class="btn btn-primary">Get Chrome Extension<i data-feather="arrow-right" class="icons-sm ml-1"></i></a>
+                                <a href="https://chrome.google.com/webstore/detail/qlip/jcjomhnnakdmohcahnbpgchmgbihdohg" class="btn btn-primary">Get Chrome Extension<i data-feather="arrow-right" class="icons-sm ml-1"></i></a>
                             </div>
                         </div>
                     </div>
@@ -178,7 +187,7 @@
                         <div class="mt-4 mt-lg-0">
                             <div class="avatar-md mb-4">
                                 <span class="avatar-title rounded-circle bg-soft-primary">
-                                    <i data-feather="tag" class="icon-dual-primary"></i>
+                                    <i class="fas fa-tags icon-dual-primary" style="font-size: 22px;"></i>
                                 </span>
                             </div>
                             <h3>Your Design Showcase</h3>
@@ -188,13 +197,18 @@
 
                             <div class="row">
                                 <div class="col-sm-12">
-                                    <p>🏷 🌐 Organized with tag and domain</p>
-                                    <p>🖼 Displayed in <a href="https://app.qlip.page" >your showcase</a></p>
+                                    <p>
+                                        <i class="fas fa-tags"></i>
+                                        <i class="fas fa-globe"></i>
+                                        Organized with tag and domain</p>
+                                    <p>
+                                        <i class="fas fa-images"></i> 
+                                        Displayed in <a href="https://app.qlip.page" >your showcase</a></p>
                                 </div>
                             </div>
 
                             <div class="mt-4">
-                                <a href="https://app.qlip.page" class="btn btn-primary">See Your Showcase<i data-feather="arrow-right" class="icons-sm ml-1"></i></a>
+                                <a href="https://app.qlip.page" class="btn btn-primary">Open Your Showcase<i data-feather="arrow-right" class="icons-sm ml-1"></i></a>
                             </div>
                         </div>
                     </div>
@@ -224,7 +238,7 @@
                                 <div class="row justify-content-center">
                                     <div class="col-md-6">
                                         <div class="mt-1">
-                                            <a href="#" class="btn btn-primary mr-2"> Get Chrome Extension<i data-feather="arrow-right" class="icons-sm ml-1"></i></a>
+                                            <a href="https://chrome.google.com/webstore/detail/qlip/jcjomhnnakdmohcahnbpgchmgbihdohg" class="btn btn-primary mr-2"> Get Chrome Extension<i data-feather="arrow-right" class="icons-sm ml-1"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -258,9 +272,6 @@
             <!-- end container -->
         </section>
         <!-- Footer alt start -->
-
-        <!-- Javascript -->
-        <script src="js/feather.min.js"></script>
 
         <!-- app js -->
         <script src="js/app.js"></script>
